--- a/main/www/index.html
+++ b/main/www/index.html
@@ -27,7 +27,7 @@
     <ion-side-menus>
       <!-- Left menu -->
       <ion-side-menu side="left">
-        <ion-header-bar class="bar-energized">
+        <ion-header-bar class="bar-calm">
           <h1 class="title">More?</h1>
         </ion-header-bar>
         <ion-content class="background-royal">
@@ -42,7 +42,7 @@
 
       <ion-side-menu-content>
         <!-- The nav bar that will be updated as we navigate -->
-        <ion-nav-bar class="bar-energized">
+        <ion-nav-bar class="bar-calm">
           <ion-nav-back-button></ion-nav-back-button>
           <ion-nav-buttons side="left">
            <!-- Toggle left side menu -->
