--- a/main/www/index.html
+++ b/main/www/index.html
@@ -12,7 +12,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
     <!-- google maps javascript -->
-       <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
+       <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&amp;sensor=true"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
